Fix Horizontal Scroll issue.
Fix horizontal scroll issue due to image overflow. Use min-width properties to increase responsiveness.

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,6 @@ nav {
 
 nav ul {
     list-style: none;
-    padding-top: 15px;
 }
 
 nav li {
@@ -262,7 +261,7 @@ nav a:hover {
     background-image: linear-gradient(to top, var(--secondary) 0%, var(--primary) 100%);
     padding: 1.25rem 2.5rem;
     border: none;
-    border-radius: .5rem;
+    border-radius: 1rem;
     margin-top: 2rem;
     cursor: pointer;
     position: relative;
@@ -290,7 +289,6 @@ nav a:hover {
 .main-img-container img {
     height: 100%;
     width: 100%;
-    min-width: 20rem;
 }
 
 #main-img {
@@ -316,13 +314,21 @@ nav a:hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    justify-items: center;
 }
 
 .intro-img {
     width: 100%;
-    min-width: 25rem;
-    max-width: 40rem;
+    min-width: 20em;
+    max-width: 50em;
     padding-top: 1rem;
+    display: flex;
+    align-items: center;
+}
+
+.intro-img img {
+    width: 100%;
+    max-width: 40em;
 }
 
 .intro-text {
@@ -331,9 +337,16 @@ nav a:hover {
 }
 
 .intro-text h2 {
-    padding-bottom: 1rem;
+    padding-block: 1rem;
 }
 
+/* Intro Section Responsiveness */
+
+@media screen and (min-width: 40rem) {
+    .intro-img {
+        min-width: 25rem;
+    }
+}
 
 
 /* Why Us Section CSS */
@@ -417,8 +430,8 @@ nav a:hover {
 
 .services-card {
     margin: 3rem;
-    height: 25rem;
-    width: 17rem;
+    height: 24rem;
+    width: 15rem;
     border-radius: .5rem;
     background-image: linear-gradient(
         to bottom, rgba(0,0,0,0) 0%, 
@@ -728,6 +741,7 @@ nav a:hover {
 /* Dogs Page CSS */
 
 .dogs-main {
+    background-color: var(--black);
     padding: 6rem 2rem 2rem;
     display: flex;
     flex-wrap: wrap;
